Not Scrollable bug fixed
Resources: https://stackoverflow.com/questions/24246914/website-wont-scroll-down

Extra Bug found:
content box padding not showing at the bottom

--- a/styles.css
+++ b/styles.css
@@ -37,11 +37,11 @@ img {
 }
 
 .home {
-	position: fixed;
+	/*position: fixed;
 	top: 0;
 	bottom: 0;
 	left: 0;
-	right: 0;
+	right: 0; */
 	display: flex;
 	flex-direction: row;
 	background-color: #65715E; 
